--- a/res/values/aim_strings.xml
+++ b/res/values/aim_strings.xml
@@ -583,6 +583,8 @@
     <string name="show_carrier_enabled">Lockscreen &amp; statusbar</string>
     <string name="status_bar_carrier_color">Carrier label color</string>
     <string name="show_carrier_both">Lockscreen &amp; statusbar</string>
+    <string name="status_bar_carrier_size">Carrier label text size</string>
+    <string name="status_bar_carrier_font_style_title">Carrier Label Font</string>
 
 <!-- Recent clear all button and location -->
     <string name="show_clear_all_recents_button_title">Clear all FAB</string>
